...
            title: "Scan",
          }}
        />
        <Tabs.Screen
          name="wardrobe"
          options={{
            title: "Wardrobe",
          }}
        />
        <Tabs.Screen
          name="looks"
          options={{
            title: "Saved",
...
