...
              animationDuration: 200,
            }}
          />
          <Stack.Screen
            name="add-item"
            options={{
              title: "Add Item",
              presentation: "fullScreenModal",
              headerShown: false,
            }}
          />
          <Stack.Screen
            name="all-checks"
...
